# multi_process_thread_communication

./: .gitignore  CMakeLists.txt  README.md
include/: capThread.h  deque.hpp  fifofile.h  shm_common.h  shmcirqueue.h
lib/: libqueuecom.sh
samples/: CMakeLists.txt  common.h  consumer_shmcq.cpp  deque_template_test.cpp  producer.cpp  producer_shmcq.cpp  queue_test.cpp  readfifo.cpp  writefifo.cpp
samples/reference/: consumer.cpp  producer.cpp
src/: capThread.cpp  fifofile.cpp  shmcirqueue.cpp
tmp/: Data.txt
